--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Artisna</title>
-    </head>
-    <body>
-        <p>Test.</p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Static Website Template</title>
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+    }
+    
+    #image-container {
+      text-align: center;
+    }
+    
+    #image-container img {
+      max-width: 100%;
+      height: auto;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <div id="image-container">
+    <a href="http://instagram.com/artisnabypooja/"><img src="https://i.imgur.com/OkFoXJM.jpg" alt="Clickable Image"></a>
+  </div>
+</body>
 </html>
