--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div id="image-container">
-    <a href="http://instagram.com/artisnabypooja/"><img src="https://i.imgur.com/OkFoXJM.jpg" alt="Clickable Image"></a>
+    <a href="http://instagram.com/artisnabypooja/"><img src="https://i.imgur.com/OkFoXJM.jpg" alt=Instagram"></a>
   </div>
 </body>
 </html>
